[Auth] Add authentication functions
